--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas
-numpy 
-streamlit 
-tensorflow
-scikit-learn
+pandas==2.2.3
+numpy==2.2.0
+streamlit==1.40.2
+tensorflow==2.18.0
+scikit-learn==1.6.0
 datetime
-Tensorboard
+Tensorboard==2.18.0
 EarlyStopping
